--- a/css/contact.css
+++ b/css/contact.css
@@ -93,7 +93,15 @@ button[type=submit]{
     padding:10px;
     margin-left: 170px;
     width: 100px;
+    transition-property: background;
+    transition-duration: 0.15s;
+    transition-timing-function: ease-out;
+    transition-delay: 0.5s;
   }
+
+button[type=submit]:hover{
+   background-color: #d07ea7;
+}
 
 /* end of contact form */
 
