--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ li a {
     text-decoration: none;
     font-size: 16px;
     font-family: 'Oswald', sans-serif;
+    /* transition: all 0.5s ease-out; */
 }
 
 li a:hover {
@@ -116,6 +117,7 @@ li a:hover {
     text-decoration: none;
     display: inline-block;
     font-size: 10px;
+    /* transition: all 0.5s ease-out; */
 }
 
 .contact button:hover {
