--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ li a {
     text-decoration: none;
     font-size: 16px;
     font-family: 'Oswald', sans-serif;
-    /* transition: all 0.5s ease-out; */
 }
 
 li a:hover {
@@ -180,4 +179,87 @@ footer p{
 footer p a {
     color:#ccc;
     text-align: center;
+}
+
+/* for desktop */
+@media only screen and (min-width: 1100px) {
+    .logo {
+        width: 99%;
+    }
+    
+    nav ul {
+        margin: 0;
+        padding: 0;
+        margin-top: -80px;
+    }
+
+    nav li a {
+        padding:10px;
+        font-size: 40px;
+    }
+
+    .mainbanner {
+        width: 1535px;
+    }
+
+    .ourstory h1 {
+        font-size: 35px;
+    }
+
+    .ourstory p {
+        font-size: 18px;
+        padding-left: 400px;
+        padding-right: 400px;
+        line-height: 30px;
+    }
+
+    .custom {
+        margin-left: 130px;
+    }
+
+    .customheadings {
+        justify-content: space-around ;
+    }
+
+    .customheadings h3 {
+        font-size: 20px;
+        font-weight: lighter;
+    }
+
+    .info {
+        margin-left: 50px;
+        grid-gap: 400px;
+    }
+
+    .info h3 {
+        font-size: 29px;
+    }
+
+    .info .contact p {
+        font-size: 15px;
+    }
+    
+    .info .address p {
+        font-size: 15px;
+    }
+    
+    .info .hours p {
+        font-size: 15px;
+    }
+
+    .contact button {
+        width: 200px;
+    }
+
+    .address button {
+        width: 200px;
+    }
+
+    .media {
+       margin-right:20px;
+    }
+
+    .media a i{
+       font-size: 40px; 
+    }
 }
